W-18350146: Server Sent Events implementation in Grizzly (#750)
(cherry picked from commit 23323e273f8585f280ba5e6e8546e0390034afc7)